# refcheck

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  bibtex.py  config.py  matching.py  models.py  pyproject.toml  requirements.txt  run.sh  server.json  server.py
clients/: __init__.py  arxiv.py  crossref.py  ieee.py  scopus.py  semantic_scholar.py
src/refcheck/: __init__.py  __main__.py  bibtex.py  cache.py  cli.py  config.py  matching.py  models.py  server.py
src/refcheck/clients/: __init__.py  ads.py  arxiv.py  crossref.py  ieee.py  inspire.py  scopus.py  semantic_scholar.py
tests/: evaluations.xml  run_evaluations.py  test_clients_parse.py  test_write_bibtex.py
